examples/test/testpolicy9717.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9717
  namespace: namespace161
spec:
  podSelector:
    matchLabels:
      key28: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value4
          key38: value8
          key23: value18
      podSelector:
        matchLabels:
          key35: value47
          key4: value37
          key29: value12
